--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #000005;
-	background-color: #2FCFD7;
+	color: #000015;
+	background-color: #350869;
 }
 
 #muse_css_mq
@@ -434,7 +434,7 @@
 
 #u1760-5
 {
-	z-index: 58;
+	z-index: 59;
 	width: 782px;
 	min-height: 26px;
 	background-color: transparent;
@@ -457,7 +457,7 @@
 
 #u3841-9
 {
-	z-index: 66;
+	z-index: 67;
 	width: 782px;
 	min-height: 70px;
 	background-color: transparent;
@@ -519,7 +519,7 @@
 
 #u3750
 {
-	z-index: 65;
+	z-index: 66;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -547,7 +547,7 @@
 
 #u4546-4
 {
-	z-index: 81;
+	z-index: 82;
 	width: 239px;
 	min-height: 151px;
 	background-color: transparent;
@@ -579,7 +579,7 @@
 
 #u3749
 {
-	z-index: 64;
+	z-index: 65;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -606,7 +606,7 @@
 
 #u4549-4
 {
-	z-index: 85;
+	z-index: 86;
 	width: 245px;
 	min-height: 151px;
 	background-color: transparent;
@@ -623,7 +623,7 @@
 
 #u4349
 {
-	z-index: 79;
+	z-index: 80;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -650,7 +650,7 @@
 
 #u4552-4
 {
-	z-index: 89;
+	z-index: 90;
 	width: 245px;
 	min-height: 151px;
 	background-color: transparent;
@@ -675,7 +675,7 @@
 
 #u3748
 {
-	z-index: 63;
+	z-index: 64;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -712,7 +712,7 @@
 
 #u4555-4
 {
-	z-index: 93;
+	z-index: 94;
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
@@ -744,6 +744,35 @@
 	padding-top: 80px;
 }
 
+#pu4522
+{
+	width: 0.01px;
+	margin-right: -10000px;
+	margin-top: 178px;
+	margin-left: 1006px;
+}
+
+#u4522
+{
+	z-index: 81;
+	width: 68px;
+	min-height: 51px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+}
+
+#u5629
+{
+	z-index: 58;
+	width: 60px;
+	min-height: 60px;
+	margin-left: 7px;
+	margin-top: 232px;
+	position: relative;
+}
+
 #u3099
 {
 	z-index: 4;
@@ -764,23 +793,9 @@
 	left: 50px;
 }
 
-#u4522
-{
-	z-index: 80;
-	width: 68px;
-	min-height: 51px;
-	border-width: 0px;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 178px;
-	left: 1006px;
-}
-
 #u3844-4
 {
-	z-index: 75;
+	z-index: 76;
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
@@ -803,7 +818,7 @@
 
 #u5379-4
 {
-	z-index: 158;
+	z-index: 159;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -839,7 +854,7 @@
 
 #u5371-4
 {
-	z-index: 154;
+	z-index: 155;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -876,7 +891,7 @@
 
 #u5363-4
 {
-	z-index: 150;
+	z-index: 151;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -920,7 +935,7 @@
 
 #u5355-4
 {
-	z-index: 146;
+	z-index: 147;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -955,7 +970,7 @@
 
 #u5347-4
 {
-	z-index: 142;
+	z-index: 143;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -993,7 +1008,7 @@
 
 #u5339-4
 {
-	z-index: 138;
+	z-index: 139;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1042,7 +1057,7 @@
 
 #u5318-4
 {
-	z-index: 134;
+	z-index: 135;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1077,7 +1092,7 @@
 
 #u5387-4
 {
-	z-index: 162;
+	z-index: 163;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1115,7 +1130,7 @@
 
 #u5398-4
 {
-	z-index: 166;
+	z-index: 167;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1153,7 +1168,7 @@
 
 #u5409-4
 {
-	z-index: 170;
+	z-index: 171;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1189,7 +1204,7 @@
 
 #u5412-4
 {
-	z-index: 174;
+	z-index: 175;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1226,7 +1241,7 @@
 
 #u5415-4
 {
-	z-index: 178;
+	z-index: 179;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1270,7 +1285,7 @@
 
 #u5450-4
 {
-	z-index: 182;
+	z-index: 183;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1306,7 +1321,7 @@
 
 #u5527-4
 {
-	z-index: 210;
+	z-index: 211;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1343,7 +1358,7 @@
 
 #u5461-4
 {
-	z-index: 186;
+	z-index: 187;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1387,7 +1402,7 @@
 
 #u5464-4
 {
-	z-index: 190;
+	z-index: 191;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1422,7 +1437,7 @@
 
 #u5483-4
 {
-	z-index: 194;
+	z-index: 195;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1460,7 +1475,7 @@
 
 #u5486-4
 {
-	z-index: 198;
+	z-index: 199;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1503,7 +1518,7 @@
 
 #u5489-4
 {
-	z-index: 202;
+	z-index: 203;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1540,7 +1555,7 @@
 
 #u5516-4
 {
-	z-index: 206;
+	z-index: 207;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1603,7 +1618,7 @@
 
 #u5168-4
 {
-	z-index: 101;
+	z-index: 102;
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
@@ -1627,7 +1642,7 @@
 
 #u5167
 {
-	z-index: 100;
+	z-index: 101;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1655,7 +1670,7 @@
 
 #u5169-4
 {
-	z-index: 105;
+	z-index: 106;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1676,7 +1691,7 @@
 
 #u5170
 {
-	z-index: 109;
+	z-index: 110;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1704,7 +1719,7 @@
 
 #u5171-4
 {
-	z-index: 110;
+	z-index: 111;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1725,7 +1740,7 @@
 
 #u5172
 {
-	z-index: 114;
+	z-index: 115;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1753,7 +1768,7 @@
 
 #u5173-4
 {
-	z-index: 115;
+	z-index: 116;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1781,7 +1796,7 @@
 
 #u5106-3
 {
-	z-index: 97;
+	z-index: 98;
 	width: 782px;
 	min-height: 24px;
 	background-color: transparent;
@@ -1799,7 +1814,7 @@
 
 #u5204
 {
-	z-index: 119;
+	z-index: 120;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1827,7 +1842,7 @@
 
 #u5205-4
 {
-	z-index: 120;
+	z-index: 121;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1848,7 +1863,7 @@
 
 #u5210
 {
-	z-index: 124;
+	z-index: 125;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1876,7 +1891,7 @@
 
 #u5211-4
 {
-	z-index: 125;
+	z-index: 126;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1897,7 +1912,7 @@
 
 #u5216
 {
-	z-index: 129;
+	z-index: 130;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1937,7 +1952,7 @@
 
 #u5217-4
 {
-	z-index: 130;
+	z-index: 131;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
