--- a/css/contact-thanks.css
+++ b/css/contact-thanks.css
@@ -1,7 +1,7 @@
 .version.contact_thanks /* version checker */
 {
-	color: #00000F;
-	background-color: #B834D2;
+	color: #0000E0;
+	background-color: #3B43DE;
 }
 
 #muse_css_mq
@@ -455,7 +455,7 @@
 
 #u1289-10
 {
-	z-index: 58;
+	z-index: 59;
 	width: 782px;
 	min-height: 56px;
 	background-color: transparent;
@@ -469,6 +469,17 @@
 	margin-right: -10000px;
 	margin-top: 87px;
 	left: 130px;
+}
+
+#u5629
+{
+	z-index: 58;
+	width: 60px;
+	min-height: 60px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 612px;
+	left: 963px;
 }
 
 #u3093
@@ -542,6 +553,6 @@ body
 
 .verticalspacer
 {
-	min-height: 17px;
+	min-height: 12px;
 }
 
