--- a/css/privacy-policy.css
+++ b/css/privacy-policy.css
@@ -1,7 +1,7 @@
 .version.privacy_policy /* version checker */
 {
-	color: #000008;
-	background-color: #34E0B3;
+	color: #000002;
+	background-color: #D9EACE;
 }
 
 #muse_css_mq
@@ -443,13 +443,13 @@
 
 #u1251-4
 {
-	z-index: 122;
+	z-index: 121;
 	width: 216px;
 	min-height: 34px;
 	background-color: transparent;
-	color: #E792C4;
 	text-align: center;
 	font-size: 30px;
+	color: #E792C4;
 	line-height: 36px;
 	font-family: bitter, serif;
 	font-weight: 400;
@@ -460,7 +460,7 @@
 
 #u1252
 {
-	z-index: 126;
+	z-index: 125;
 	width: 782px;
 	height: 16px;
 	border-style: solid;
@@ -475,7 +475,7 @@
 
 #u1250-63
 {
-	z-index: 59;
+	z-index: 58;
 	width: 782px;
 	min-height: 834px;
 	background-color: transparent;
@@ -530,17 +530,6 @@
 	position: relative;
 	margin-right: -10000px;
 	left: 50px;
-}
-
-#u5629
-{
-	z-index: 58;
-	width: 60px;
-	min-height: 60px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 612px;
-	left: 963px;
 }
 
 #u3093
