--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #000007;
-	background-color: #E5A8CC;
+	color: #0000E2;
+	background-color: #0F2D2C;
 }
 
 #muse_css_mq
@@ -455,7 +455,7 @@
 
 #slideshowu3521
 {
-	z-index: 59;
+	z-index: 58;
 	width: 0.01px;
 	height: 472px;
 	position: relative;
@@ -474,12 +474,12 @@
 
 #u3522popup
 {
-	z-index: 60;
+	z-index: 59;
 }
 
 #u3700
 {
-	z-index: 61;
+	z-index: 60;
 	width: 782px;
 	height: 472px;
 	border-width: 0px;
@@ -497,7 +497,7 @@
 
 #u4204
 {
-	z-index: 63;
+	z-index: 62;
 	width: 782px;
 	height: 472px;
 	border-width: 0px;
@@ -525,13 +525,13 @@
 
 #u410-12
 {
-	z-index: 65;
+	z-index: 64;
 	width: 329px;
 	min-height: 229px;
 	background-color: transparent;
-	color: #0092C4;
 	text-align: center;
 	font-size: 38px;
+	color: #0092C4;
 	line-height: 46px;
 	font-family: bitter, serif;
 	font-weight: 400;
@@ -544,17 +544,6 @@
 #u410-2,#u410-6,#u410-8
 {
 	color: #E792C4;
-}
-
-#u5629
-{
-	z-index: 58;
-	width: 60px;
-	min-height: 60px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 612px;
-	left: 963px;
 }
 
 #u3093
@@ -628,6 +617,6 @@ body
 
 .verticalspacer
 {
-	min-height: 12px;
+	min-height: 17px;
 }
 
